Avance de funciones y descuentos

--- a/descuentos.html
+++ b/descuentos.html
@@ -21,8 +21,8 @@
         <form>
             <label for="InputPrice">Ingrese el valor del producto: </label><br>
             <input type="number" id="InputPrice" /><br>
-            <label for="InputDiscount">Ingrese el valor del descuento</label><br>
-            <input type="number" id="InputDiscount" /><br>
+            <label for="InputCoupon">Escribe el cupón de descuento para tu producto</label><br>
+            <input type="text" id="InputCoupon" /><br>
             <button type="button" onclick="onclcikButtonPriceDiscount()">Calcular el precio con descuento</button>
 
             <p id="ResultP"></p>
