--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="./descuentos.html">Taller #2</a>
                 </li>
                 <li>
-                    <a href="./promedio.html">Taller #3a</a>
+                    <a href="./pomedio.html">Taller #3a</a>
                 </li>
                 <li>
                     <a href="./mediana.html">Taller #3b</a>
